--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -1006,24 +1006,29 @@ EVTOPTB347001;What? I can't understand anything!;;;;;;;;;;;;;x
 EVTOPTC347001;Appellandi modo restituto loquamur.;;;;;;;;;;;;;x
 EVTDESC347002;Haud omnes magni existamabant ut nos Latinam linguam in vita restituisse, aestimantes nos solum iactantiam secutos esse. Praeclarum est eos stultos esse. Deinde acerbius in istos invehi "novos" coepimus, sed ii non modo iniuria suis inferri non putant, verum etiam honoris gloriaeque causam talem nomimem ducunt, quod in "novitate" virtus sit. Ultimam rem gerere debemus, antequam ipsi nos ab imperio labefactaverint.;;;;;;;;;;;;;x
 EVTNAME347002;Novis Obstantis;;;;;;;;;;;;;x
-EVTOPTA347002;Ab eo non sollicitor;;;;;;;;;;;;;x
+EVTOPTA347002;Ab eo non sollicitor.;;;;;;;;;;;;;x
 EVTOPTB347002;Cruentissima caedes erit!;;;;;;;;;;;;;x
 EVTDESC347003;Hodie dies quietus fuit et nihil melius est quam somnus longus beatusque. Sic cogitabant plurima gloriosae partis duces, nescientes de pericolo incombente. Dum dormiunt, quaedam nefaria factio novorum inebat in adversariorum domum, desideratura omnes occidere. Cruentissima caedes coeperunt et… et…\n …and no one, of the supporters of Latin reinstatement, was left alive. The Novi have triumphed.;;;;;;;;;;;;;x
 EVTNAME347003;Novorum Cospiratio;;;;;;;;;;;;;x
 EVTOPTA347003;Viva l'Italia! Viva l'Italiano!;;;;;;;;;;;;;x
 EVTDESC347004;Pars nostra num solum litterarum pars est, sed post caedem novorum summae rerum hoc interest.;;;;;;;;;;;;;x
 EVTNAME347004;De Usu Publico;;;;;;;;;;;;;x
-EVTOPTA347004;Nihil;;;;;;;;;;;;;x
+EVTOPTA347004;Nihil.;;;;;;;;;;;;;x
 EVTOPTB347004;Haec pars dubia, deprehendete!;;;;;;;;;;;;;x
-EVTOPTC347004;Haec pars recta, reliquua non mei interest;;;;;;;;;;;;;x
-EVTDESC347005;In Italico senato parti nostrae nonnulli favent: quare notiones nostri de Latina lingua suoque usu sermone commune effici potessent, si praevaleremus. Nobis senatoribus persuadendum et Roma Italiaque magnae rursus erunt… \n Res controversissima est, oratores nostri concitati orationem tenent et factio nostra victrix esse videtur. Sed subito patres qui in nomine incrementi Latinae linguae se opponere perseverant clamores tollere: quomodo sermonem totius civitatis mutare posse, quis in se hoc recipere, quantum imperium eum habere? Unus quaerere audet si Italia vocari possimus res publica quae Latine loquit.;;;;;;;;;;;;;x
+EVTOPTC347004;Haec pars recta, reliquua non mei interest.;;;;;;;;;;;;;x
+EVTDESC347005;In Italico senato parti nostrae nonnulli favent: quare notiones de Latina lingua suoque usu sermone commune effici potessent, si praevaleremus. Nobis senatoribus persuadendum et Roma Italiaque magnae rursus erunt… \n Res controversissima est, oratores nostri concitati orationem tenent et factio nostra victrix esse videtur. Sed subito patres qui in nomine incrementi Latinae linguae se opponere perseverant clamores tollere: quomodo sermonem totius civitatis mutare posse, quis in se hoc recipere, quantum imperium eum habere? Unus quaerere audet si Italia vocari possit res publica quae Latine loquat.;;;;;;;;;;;;;x
 EVTNAME347005;De Usu Publico;;;;;;;;;;;;;x
-EVTOPTA347005;Nova res publica opus est;;;;;;;;;;;;;x
+EVTOPTA347005;Nova res publica opus est.;;;;;;;;;;;;;x
 EVTOPTB347005;Latin? In $YEAR$? Are we some kind of larpers?;;;;;;;;;;;;;x
-EVTOPTC347005;Praeses unus statuat, imperium est ei;;;;;;;;;;;;;x
-EVTDESC347006;Res Publica Romana rursus ortur. Omnes nisus nostri pretium solverunt et toti senatui administrationique iam non Italiae, sed Novae Romae Latinum sermonem rectam linguam imperii esse persuasum est. Accipit Romae triumphum gloriosus quod civibus gloriam nostram quae perpetuam in saeculis erit ostendat. Salvete, veteri mores, a filiis nepotibusque commemorabimini et Romana potestas fulgebit in perpetuum.;;;;;;;;;;;;;x
+EVTOPTC347005;Praeses unus statuat, imperium ei sit.;;;;;;;;;;;;;x
+EVTDESC347006;Res Publica Romana rursus ortur. Omnes nisus nostri pretium solverunt et toti senatui administrationique iam non Italiae, sed Novae Romae Latinum sermonem rectam linguam imperii esse persuasum est. Accipit Romae triumphus gloriosus qui civibus gloriam nostram quae perpetuam in saeculis erit ostendat. Salvete, veteri mores, a filiis nepotibusque commemorabimini et Romana potestas fulgebit in perpetuum.;;;;;;;;;;;;;x
 EVTNAME347006;Roma Constituta Est;;;;;;;;;;;;;x
 EVTOPTA347006;Magnum gaudium summamque laetitiam!;;;;;;;;;;;;;x
+EVTDESC347007;Post consilium appellandi modi ecclesiastici sequendi Pontifex Romanus ipse Latini sermonis et eius usus in administratione imperioque ducem se preabuit quia Ecclesia Catholica veterum mores et linguam sola in saeculis tuita esset. Manifesto hoc ei magnam auctoritatem daret et quae popouli liberalis pars odium in illa instituta religiosa habet sine dubio ea nobis irascaretur, sed accipere consuetudinum optimum custodem recipiet.;;;;;;;;;;;;;x
+EVTNAME347007;Pontificis condicio;;;;;;;;;;;;;x
+EVTOPTA347007;Vale Pontifex!;;;;;;;;;;;;;x
+EVTOPTB347007;Unus custos: rex.;;;;;;;;;;;;;x
+EVTOPTC347007;Amens Pontifex! Satellites, occidete!;;;;;;;;;;;;;x
 EVTOPTA369706;Give them more than they estimated.;;;;;;;;;;;;;x
 EVTOPTB369706;Give them the amount estimated.;;;;;;;;;;;;;x
 EVTOPTC369706;Give them less than they estimated.;;;;;;;;;;;;;x
