--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -2,9 +2,9 @@ CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;;x
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;;x
-usus_publicus_latini_sermonis_coda;Contra aliqui administrorum nos periculosos interfectores et comprehendendos esse dicunt, putantes Latinam linguam mortua esse. Itaque, quid factum sit?;;;;;;;;;;;;;x
-usus_publicus_latini_sermonis_dux;Nam dux Italiae et imperator totius civitatis, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut sui Italici populique gloria at honos augeantur.;;;;;;;;;;;;;x
-usus_publicus_latini_sermonis_praeses;Nam praeses Italiae, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut sui reipublicaeque gloria at honos augeantur.;;;;;;;;;;;;;x
-usus_publicus_latini_sermonis_rex_borbone;Nam rex Italiae, ex domo regnatrice Borbonis, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut Borbonum regnique gloria at honos augeantur.;;;;;;;;;;;;;x
-usus_publicus_latini_sermonis_rex_savoia;Nam rex Italiae, ex domo regnatrice Savoia, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut Savoiarum regnique gloria at honos augeantur.;;;;;;;;;;;;;x
-usus_publicus_latini_sermonis_summus_scriba;Nam summus scriba et imperator proletarii, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut sui populique gloria at honos augeantur.;;;;;;;;;;;;;x
+usus_publicus_latini_sermonis_coda;§bContra aliqui administrorum nos periculosos interfectores et comprehendendos esse dicunt, putantes Latinam linguam mortua esse. Itaque, quid factum sit?§W;;;;;;;;;;;;;x
+usus_publicus_latini_sermonis_dux;§bNam dux Italiae et imperator totius civitatis, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut sui Italici populique gloria at honos augeantur.§W;;;;;;;;;;;;;x
+usus_publicus_latini_sermonis_praeses;§bNam praeses Italiae, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut sui reipublicaeque gloria at honos augeantur.§W;;;;;;;;;;;;;x
+usus_publicus_latini_sermonis_rex_borbone;§bNam rex Italiae, ex domo regnatrice Borbonis, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut Borbonum regnique gloria at honos augeantur.§W;;;;;;;;;;;;;x
+usus_publicus_latini_sermonis_rex_savoia;§bNam rex Italiae, ex domo regnatrice Savoia, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut Savoiarum regnique gloria at honos augeantur.§W;;;;;;;;;;;;;x
+usus_publicus_latini_sermonis_summus_scriba;§bNam summus scriba et imperator proletarii, magni factionis nostrae aestimans, usui publico Latino sermone uti vult ut sui populique gloria at honos augeantur.§W;;;;;;;;;;;;;x
