Added Lithuanian 1863 revolt

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1485,6 +1485,18 @@ LIP_hms_government;Principality of Lippe;;;;;;;;;;;;;x
 LIP_parliamentary_republic;Free State of Lippe;;;;;;;;;;;;;x
 LIP_proletarian_dictatorship;Detmolder Democratic Republic;;;;;;;;;;;;;x
 LIP_prussian_constitutionalism;Principality of Lippe;;;;;;;;;;;;;x
+LIT_absolute_monarchy;Grand Duchy of Lithuania;;;;;;;;;;;;;x
+LIT_absolute_monarchy2;Grand Duchy of Lithuania;;;;;;;;;;;;;x
+LIT_colonial_company;Vilna Governorate-General;;;;;;;;;;;;;x
+LIT_democracy;Republic of Lithuania;;;;;;;;;;;;;x
+LIT_dominion;Vilna Governorate-General;;;;;;;;;;;;;x
+LIT_fascist_dictatorship;Lithuanian State;;;;;;;;;;;;;x
+LIT_hms_government;Grand Duchy of Lithuania;;;;;;;;;;;;;x
+LIT_hms_government2;Grand Duchy of Lithuania;;;;;;;;;;;;;x
+LIT_presidential_dictatorship;Lithuanian Provincial Committee;;;;;;;;;;;;;x
+LIT_proletarian_dictatorship;Lithuanian Soviet Socialist Republic;;;;;;;;;;;;;x
+LIT_prussian_constitutionalism;Grand Duchy of Lithuania;;;;;;;;;;;;;x
+LIT_prussian_constitutionalism2;Grand Duchy of Lithuania;;;;;;;;;;;;;x
 LIV_colonial_company;Livland Governorate;;;;;;;;;;;;;x
 LIV_dominion;Livland Governorate;;;;;;;;;;;;;x
 LIV_hms_government;Grand Duchy of Livonia;;;;;;;;;;;;;x
