--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -5,8 +5,8 @@ EVTOPTA500000;When will the Poles be free?;;;;;;;;;;;;;x
 EVTDESC500001;After the latest war our subjects in Poland and other parts of our empire began to grow restless. The uprising began as a spontaneous protest by young Poles against conscription into the $COUNTRY_ADJ$ Army. It was soon joined by high-ranking Polish-Lithuanian officers and various politicians. In Warsaw alone 116 demonstrations were held in $YEAR$. Much of these manifestations in ended in clashes with the $COUNTRY_ADJ$ Army. In spite of $COUNTRY_ADJ$ police interference, a symbolic meeting of hymn-singing Poles and Lithuanians took place on the bridge across an important River. The crowds sang ‘God protect Poland’ in Lithuanian and Belarusian. Earlier in $YEAR$ the $COUNTRY_ADJ$ government introduced a state of emergency in Kovno and Grodno as well as several other Polish-majority provinces. Public gatherings were banned and some public leaders were declared outlaws. The situation threatens to break down in anarchy.;;;;;;;;;;;;;x
 EVTNAME500001;The Polish Uprising of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA500001;Suppress them immediately.;;;;;;;;;;;;;x
-EVTOPTC500001;Let them be free.;;;;;;;;;;;;;x
-EVTOPTD500001;Onwards to Poland!;;;;;;;;;;;;;x
+EVTOPTB500001;Let them be free.;;;;;;;;;;;;;x
+EVTOPTC500001;Onwards to Poland!;;;;;;;;;;;;;x
 EVTDESC500002;Poles in $FROMCOUNTRY$, together with some other nationalities in the territory of the former Polish-Lithuanian Commonwealth, started a general uprising against the $FROMCOUNTRY_ADJ$ government. There is an outcry from some sectors of our population to support Polish freedom, but there wouldn’t be any problems if we stayed neutral on this matter either.;;;;;;;;;;;;;x
 EVTNAME500002;The Polish Uprising;;;;;;;;;;;;;x
 EVTOPTA500002;Help the Poles in any way we can.;;;;;;;;;;;;;x
@@ -29,6 +29,11 @@ EVTNAME500006;The Greater Poland Uprising;;;;;;;;;;;;;x
 EVTOPTA500006;Death to the rebels!;;;;;;;;;;;;;x
 EVTOPTB500006;It isn't worth the fight.;;;;;;;;;;;;;x
 EVTOPTC500006;Onwards to Poznan!;;;;;;;;;;;;;x
+EVTDESC500007;After our Poland subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene.;;;;;;;;;;;;;x
+EVTNAME500007;The Uprising Spreads;;;;;;;;;;;;;x
+EVTOPTA500007;They'll be crushed with the rest!;;;;;;;;;;;;;x
+EVTOPTB500007;We have no choice but to let them go.;;;;;;;;;;;;;x
+EVTOPTC500007;Onwards to Lithuania!;;;;;;;;;;;;;x
 EVTDESC500058;Even though large tracts of land and many old and famous States have fallen or may fall into the grip of the $COUNTRY_ADJ$ and all the odious apparatus of their rule, we shall not flag or fail. We shall go on to the end. We shall fight in Europe, we shall fight on the seas and oceans, we shall fight with growing confidence and growing strength, we shall defend our land and the people of our planet, whatever the cost may be. We shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills, we shall never surrender, and if, which I do not for a moment believe, this land or a large part of it were subjugated and starving, then our Empire beyond the seas, armed and guarded by our Fleet, would carry on the struggle, until, in God’s good time, the New World, with all its power and might, steps forth to the rescue and the liberation of the old.\n \n With this speech the great powers finished their assembly and vowed to stop us using any means they can.;;;;;;;;;;;;;x
 EVTNAME500058;International Enemy;;;;;;;;;;;;;x
 EVTOPTA500058;Bring them on.;;;;;;;;;;;;;x
