--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -40,6 +40,7 @@ colonial_trait;Colonial §R-2 Defence;Colonial;Kolonial;;;;;;;;;;;x
 competent;Competent;Compétent;Kompetent;;;;;;;;;;;x
 confident;Confident;Confiant;Sicher;;;;;;;;;;;x
 coolminded;Cool-minded §G+2 Defence;Serein;Bedachtsam;;;;;;;;;;;x
+compassionate_priest;Compassionate Priest §G+1 Attack +2 Defence;;;;;;;;;;;;;x
 corrupt;Corrupt;Corrompu;Korrupt;;;;;;;;;;;x
 coward;Coward;Couard;Kleinmütig;;;;;;;;;;;x
 craven;Craven;Veule;Mutlos;;;;;;;;;;;x
@@ -168,3 +169,4 @@ wrathful;Wrathful §G+2 Attack;Courroucé;Zornerfüllt;;;;;;;;;;;x
 wretched;Wretched §R-1 Attack;Misérable;Jämmerlich;;;;;;;;;;;x
 yellow;Yellow §R-4 Attack;Trouillard;Memme;;;;;;;;;;;x
 yesman;Yes-man;Béni-oui-oui;Jasager;;;;;;;;;;;x
+young_genius;Young Genius §G+2 Attack +2 Defence;;;;;;;;;;;;;x
