--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1042,8 +1042,8 @@ plantation;Plantations and Mines;;;;;;;;;;;;;x
 poland_not_yet_lost;Poland Is Not Yet Lost;;;;;;;;;;;;;x
 polish_spirit;Polish Sentiment;;;;;;;;;;;;;x
 polish_spirit_desc;With the successful revolution in Krakow, Poles everywhere are clamouring for an independent and unified Poland again.;;;;;;;;;;;;;x
-polish_uprising_mobilization;Polish Uprising;;;;;;;;;;;;;x
-polish_uprising_mobilization_desc;We are mobilizing our society so Poland can be free once more.;;;;;;;;;;;;;x
+polish_uprising_mobilization;Uprising of 1863;;;;;;;;;;;;;x
+polish_uprising_mobilization_desc;We are mobilizing our society so the peoples of the Commonwealth may be free once more.;;;;;;;;;;;;;x
 political_education;Ideological Education;;;;;;;;;;;;;x
 political_education_desc;Education in our country is full blown ideological indoctrination, and has severe changes every time our leader changes. Universal public education is thus enforced and alphabetization is a priority, but at the cost of free thinking.;;;;;;;;;;;;;x
 pompeji_excavations;Pompeii Excavations;;;;;;;;;;;;;x
