Buffed Poland and redid events

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -4,9 +4,8 @@ EVTNAME500000;The Organic Statute of Poland;;;;;;;;;;;;;x
 EVTOPTA500000;When will the Poles be free?;;;;;;;;;;;;;x
 EVTDESC500001;After the latest war our subjects in Poland and other parts of our empire began to grow restless. The uprising began as a spontaneous protest by young Poles against conscription into the $COUNTRY_ADJ$ Army. It was soon joined by high-ranking Polish-Lithuanian officers and various politicians. In Warsaw alone 116 demonstrations were held in $YEAR$. Much of these manifestations in ended in clashes with the $COUNTRY_ADJ$ Army. In spite of $COUNTRY_ADJ$ police interference, a symbolic meeting of hymn-singing Poles and Lithuanians took place on the bridge across an important River. The crowds sang ‘God protect Poland’ in Lithuanian and Belarusian. Earlier in $YEAR$ the $COUNTRY_ADJ$ government introduced a state of emergency in Kovno and Grodno as well as several other Polish-majority provinces. Public gatherings were banned and some public leaders were declared outlaws. The situation threatens to break down in anarchy. The Namestnik of the Kingdom of Poland has asked for reinforcements to duly punish these fools.;;;;;;;;;;;;;x
 EVTNAME500001;The Polish Uprising of $YEAR$;;;;;;;;;;;;;x
-EVTOPTA500001;Send the forces. This puny rebellion shall be crushed.;;;;;;;;;;;;;x
-EVTOPTB500001;We have no choice but to allow them their freedom.;;;;;;;;;;;;;x
-EVTOPTC500001;Onwards to Poland!;;;;;;;;;;;;;x
+EVTOPTA500001;This does not bode well.;;;;;;;;;;;;;x
+EVTOPTB500001;Onwards to Poland!;;;;;;;;;;;;;x
 EVTDESC500002;Poles in $FROMCOUNTRY$, together with some other nationalities in the territory of the former Polish-Lithuanian Commonwealth, started a general uprising against the $FROMCOUNTRY_ADJ$ government. There is an outcry from some sectors of our population to support Polish freedom, but there wouldn’t be any problems if we stayed neutral on this matter either.;;;;;;;;;;;;;x
 EVTNAME500002;The Polish Uprising;;;;;;;;;;;;;x
 EVTOPTA500002;Help the Poles in any way we can.;;;;;;;;;;;;;x
@@ -31,9 +30,8 @@ EVTOPTB500006;It isn't worth the fight.;;;;;;;;;;;;;x
 EVTOPTC500006;Onwards to Poznan!;;;;;;;;;;;;;x
 EVTDESC500007;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
 EVTNAME500007;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
-EVTOPTA500007;They'll be crushed with the rest!;;;;;;;;;;;;;x
-EVTOPTB500007;We have no choice but to let them go.;;;;;;;;;;;;;x
-EVTOPTC500007;Onwards to Lithuania!;;;;;;;;;;;;;x
+EVTOPTA500007;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
+EVTOPTB500007;Onwards to Lithuania!;;;;;;;;;;;;;x
 EVTDESC500008;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
 EVTNAME500008;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
 EVTOPTA500008;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
