--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1362,3 +1362,22 @@ EVTNAME9024;The Pragmatic Sanction of 1830;;;;;;;;;;;;;x
 EVTDESC9024;When Philip V, from the French House of Bourbon acceded to the Spanish throne in the War of the Spanish Succession, he brought with him the Salic law, which restricted succession to the throne to the direct male line. However, King Ferdinand VII had fathered only two daughters, Isabella and Luisa Fernanda of Bourbon. Ferdinand's father, Charles IV of Spain made a weak attempt to eliminate the Salic Law, and Ferdinand brought forth the Pragmatic Sanction of 1830, so that his oldest daughter would inherit the throne and be declared queen upon his death, as was the older Castilian custom. This removed his brother, Infante Carlos, Count of Molina, as the next in the line of succession under Salic Law. Carlos' supporters, among whom was Francisco Calomarde, pressured Ferdinand VII to repeal the Pragmatic Sanction.;;;;;;;;;;;;;x
 EVTOPTA9024;Push through the Sanction.;;;;;;;;;;;;;x
 EVTOPTB9024;Wait, why are we putting a child in charge?;;;;;;;;;;;;;x
+EVTNAME9025;The Centralists vs the Federalists;;;;;;;;;;;;;x
+EVTDESC9025;The politics of Gran Colombia has been dominated for years, even during the war of independence, by the need to choose between a centralized system of government, and a centralized state centered around the capital. Bolivar himself heavily supports a centralized state, but there may be unforseen dissent in the event he gets his way.;;;;;;;;;;;;;x
+EVTOPTA9025;Bolivar must sacrifice power for stability.;;;;;;;;;;;;;x
+EVTOPTB9025;Only a centralized Colombia can survive!;;;;;;;;;;;;;x
+EVTNAME9026;The Confederal Development;;;;;;;;;;;;;x
+EVTDESC9026;The taking of a federal path for Colombia has, naturally, resulted in the devolution of central authority to the governing bodies of the states. It will take time to cement this and truly prove Colombia's place as a power.;;;;;;;;;;;;;x
+EVTOPTA9026;This will take time.;;;;;;;;;;;;;x
+EVTNAME9027;The Colombian Dissolution;;;;;;;;;;;;;x
+EVTDESC9027;Gran Colombia was dissolved in 1831 due to the political differences that existed between supporters of federalism and centralism, as well as regional tensions among the peoples that made up the republic.;;;;;;;;;;;;;x
+EVTOPTA9027;We must not allow this!:;;;;;;;;;;;;x
+EVTNAME9028;The end of Gran Colombia;;;;;;;;;;;;;x
+EVTDESC9028;The loss of central territories to the state of Gran Colombia has sent the nation into freefall, and it is an unfortunate reality that the project of Bolivar must come to an end.;;;;;;;;;;;;;x
+EVTOPTA9028;Dreadful!;;;;;;;;;;;;;x
+EVTNAME9029;The survival of Colombia;;;;;;;;;;;;;x
+EVTDESC9029;Despite all odds, the central government fostered by Bolivar has survived.;;;;;;;;;;;;;x
+EVTOPTA9029;Long live colombia!;;;;;;;;;;;;;x
+EVTNAME9030;The end of Gran Colombia;;;;;;;;;;;;;x
+EVTDESC9030;The loss of central territories to the state of Gran Colombia has sent the nation into freefall, and it is an unfortunate reality that the project of Bolivar must come to an end.;;;;;;;;;;;;;x
+EVTOPTA9030;Dreadful!;;;;;;;;;;;;;x
