--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -4,8 +4,10 @@ EVTNAME500000;The Organic Statute of Poland;;;;;;;;;;;;;x
 EVTOPTA500000;When will the Poles be free?;;;;;;;;;;;;;x
 EVTDESC500001;After the latest war our subjects in Poland and other parts of our empire began to grow restless. The uprising began as a spontaneous protest by young Poles against conscription into the $COUNTRY_ADJ$ Army. It was soon joined by high-ranking Polish-Lithuanian officers and various politicians. In Warsaw alone 116 demonstrations were held in $YEAR$. Much of these manifestations in ended in clashes with the $COUNTRY_ADJ$ Army. In spite of $COUNTRY_ADJ$ police interference, a symbolic meeting of hymn-singing Poles and Lithuanians took place on the bridge across an important River. The crowds sang ‘God protect Poland’ in Lithuanian and Belarusian. Earlier in $YEAR$ the $COUNTRY_ADJ$ government introduced a state of emergency in Kovno and Grodno as well as several other Polish-majority provinces. Public gatherings were banned and some public leaders were declared outlaws. The situation threatens to break down in anarchy. The Namestnik of the Kingdom of Poland has asked for reinforcements to duly punish these fools.;;;;;;;;;;;;;x
 EVTNAME500001;The Polish Uprising of $YEAR$;;;;;;;;;;;;;x
-EVTOPTA500001;This does not bode well.;;;;;;;;;;;;;x
+EVTOPTA500001;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
 EVTOPTB500001;Onwards to Poland!;;;;;;;;;;;;;x
+EVTOPTC500001;Onwards to Lithuania!;;;;;;;;;;;;;x
+EVTOPTD500001;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
 EVTDESC500002;Poles in $FROMCOUNTRY$, together with some other nationalities in the territory of the former Polish-Lithuanian Commonwealth, started a general uprising against the $FROMCOUNTRY_ADJ$ government. There is an outcry from some sectors of our population to support Polish freedom, but there wouldn’t be any problems if we stayed neutral on this matter either.;;;;;;;;;;;;;x
 EVTNAME500002;The Polish Uprising;;;;;;;;;;;;;x
 EVTOPTA500002;Help the Poles in any way we can.;;;;;;;;;;;;;x
