Added custom CB for Uprising

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -109,6 +109,10 @@ conquest_low_setup;Annex minor nation of $RECIPIENT$;;;;;;;;;;;;;x
 conquest_low_short;Annex $RECIPIENT$;;;;;;;;;;;;;x
 conquest_setup;Annex $RECIPIENT$;Annexer $RECIPIENT$;$RECIPIENT$ annektieren;;;;;;;;;;;x
 conquest_short;Annex $RECIPIENT$;Annexer $RECIPIENT$;$RECIPIENT$ annektieren;;;;;;;;;;;x
+crush_the_commonwealth;Crush the Polish Uprising;;;;;;;;;;;;;x
+crush_the_commonwealth_desc;Annex the rebelling territories and their satellites;;;;;;;;;;;;;x
+crush_the_commonwealth_setup;Crush the Polish Uprising;;;;;;;;;;;;;x
+crush_the_commonwealth_short;Crush the Polish Uprising;;;;;;;;;;;;;x
 cut_down_to_size;Cut down to size;Réduire;Größe reduzieren;;;;;;;;;;;x
 cut_down_to_size_boxer;Put down Boxer Rebellion;Mettre fin à la révolte des Boxers;Schlage den Boxeraufstand nieder;;;;;;;;;;;x
 cut_down_to_size_boxer_desc;Force another §Ycountry§W to disarm and pay reparations to us;Forcrer un autre §Ypays§W à désarmer et à nous payer des réparations;Zwinge ein anderes §YLand§W, abzurüsten und Reparationen an uns zu zahlen;;;;;;;;;;;x
