--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -349,6 +349,7 @@ NORMAL_WAR_NATURAL_BORDERS_NAME;$ORDER$$FIRST$–$SECOND$ War of French Restoratio
 NORMAL_WAR_NEGOTIATE_NAME;$ORDER$$SECOND$ Transfer of $STATE$ to $FIRST$;;;;;;;;;;;;;x
 NORMAL_WAR_OF_THE_AMERICAS;War of the Americas;;;;;;;;;;;;;x
 NORMAL_WAR_PADRI_WAR;The Padri War;;;;;;;;;;;;;x
+NORMAL_WAR_POLAND_UPRISING;The Polish Uprising;;;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME;$ORDER$Acquisition of $FIRST$ $SECOND_COUNTRY$;$ORDER$ $FIRST$ acquisition de $SECOND$;$ORDER$ Übernahme von $FIRST$ $SECOND$;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME_ENG_ASH;The 2nd Ashanti Expedition;;;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME_ENG_BEN;The $ORDER$Benin Expedition;;;;;;;;;;;;;x
