--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -1,4 +1,5 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
+PLACEHOLDER_TECH_INFO;Below are localisation for actual techschools, represented by country modifiers;;;;;;;;;;;;;x
 army_tech_school;Military-Industrial Complex;;;;;;;;;;;;;x
 chinese_tech_school;The Three Principles of the People;;;;;;;;;;;;;x
 commerce_tech_school;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
@@ -8,4 +9,5 @@ industrial_tech_school;Corporative Industrialism;;;;;;;;;;;;;x
 japanese_tech_school;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
 naval_tech_school;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
 prussian_tech_school;Junkers, Heer & Krupp;;;;;;;;;;;;;x
-unciv_tech_school;Developing Academia;;;;;;;;;;;;;x
+PLACEHOLDER_TITLE_INFO;Below are localisation for the title system which repurposes the vanilla techschool system.;;;;;;;;;;;;;x
+unciv_tech_school;Uncivilized Nation;;;;;;;;;;;;;x
