Neutral Nation Title

--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -1,6 +1,6 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 PLACEHOLDER_TECH_INFO;Below are localisation for actual techschools, represented by country modifiers;;;;;;;;;;;;;x
-ts_traditional;Traditional Academia;;;;;;;;;;;;;x
+ts_traditional;Traditional Academics;;;;;;;;;;;;;x
 ts_army;Military-Industrial Complex;;;;;;;;;;;;;x
 ts_chinese;The Three Principles of the People;;;;;;;;;;;;;x
 ts_commerce;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
@@ -11,4 +11,6 @@ ts_japanese;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
 ts_naval;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
 ts_prussian;Junkers, Heer & Krupp;;;;;;;;;;;;;x
 PLACEHOLDER_TITLE_INFO;Below are localisation for the title system which repurposes the vanilla techschool system.;;;;;;;;;;;;;x
-unciv_tech_school;Test 123;;;;;;;;;;;;;x
+traditional_academic;Recognized Nation;;;;;;;;;;;;;x
+title_world_bearers;World Bearers;;;;;;;;;;;;;x
+title_neutral_nation;Neutral Nation;;;;;;;;;;;;x
