--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -14,4 +14,6 @@ PLACEHOLDER_TITLE_INFO;Below are localisation for the title system which repurpo
 traditional_academic;Recognized Nation;;;;;;;;;;;;;x
 title_world_bearers;World Bearers;;;;;;;;;;;;;x
 title_neutral_nation;Neutral Nation;;;;;;;;;;;;x
+title_unrecognized_nation;Unrecognized Nation;;;;;;;;;;;;x
 colossus_of_the_south;Colossus of the South;;;;;;;;;;;;x
+title_lone_star;Lone Star State;;;;;;;;;;;;x
