Civilized Nation -> Lesser Power

--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -2012,7 +2012,7 @@ DIPLOMACY_CANNOT_SET_PRIO_WAR;We cannot influence this nation while we have a wa
 DIPLOMACY_CASUSBELLIS;Casus bellis:;Casus Belli :;;;;;;;;;;;;x
 DIPLOMACY_CB_INFO;War Justification;Casus Belli;;;;;;;;;;;;x
 DIPLOMACY_CHANCE_JOIN_WAR;Likelihood of joining the war: §Y$VAL$§W;Probabilité de rejoindre : §Y$VAL$§W;;;;;;;;;;;;x
-DIPLOMACY_CIVILIZEDNATION_STATUS;Civilized Nation;Nation civilisée;;;;;;;;;;;;x
+DIPLOMACY_CIVILIZEDNATION_STATUS;Lesser Power;Nation civilisée;;;;;;;;;;;;x
 DIPLOMACY_CLOSE_WINDOW;Closes diplomacy window;Ferme la fenêtre de la diplomatie;;;;;;;;;;;;x
 DIPLOMACY_COLONIALNATION_STATUS;Secondary Power;Puissance de second rang;;;;;;;;;;;;x
 DIPLOMACY_CORDIAL_LABEL;Cordial:;Entente cordiale :;;;;;;;;;;;;x
